fixed title spacing

--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ textarea {
 body {
   max-width: 80ex;
   width: 90%;
-  margin: 2rem auto 3rem;
+  margin: 3rem auto 4rem;
   background: #ddd;
 }
 
